--- a/first_ReadAndMovie/pages/welcome/welcome.wxml
+++ b/first_ReadAndMovie/pages/welcome/welcome.wxml
@@ -1,7 +1,7 @@
-<view>
- <image style="border-radius:50%" src="/images/avatar.jpg"/>
- <text>Hello,星河</text>
- <view>
-  <text>开启小程序之旅</text>
+<view class="container">
+ <image class="user-avatar" src="/images/avatar.jpg"/>
+ <text class="user-name">Hello,星河</text>
+ <view class="moto-container">
+  <text class="moto">开启小程序之旅</text>
  </view>
 </view>
